
	Added "mchistory" value to 'vifminfo' and 'sessionoptions' option.  It
	manages storing of command-line history of menus.

	Added ":history mcmd" menu for displaying command-line history of menus.

	Added :col[der] and :cnew[er] commands to menu mode to traverse history of
	navigation menus.

	Added :chi[story] command that opens a menu of saved menus.

	Added :chi[story] command to menu mode.

	Don't draw right padding on a truncated rightmost column of a transposed
	ls-like view.

	Made register's content being listed in normal rather then reversed order
	in :registers/:display menu.

	Don't even try to clear graphics when menu-like mode is active.  The
	graphics should have been hidden on entering the mode.

	Allowed wild menu popup to take up up to 40% of the screen.

	Made documentation of 'vifminfo' more readable.

	Rewrote "Menus and dialogs" part of the documentation.

	Increase line length limit used during formatting output of :highlight
	command to allow longer strings.

	Fixed line number column not including padding to the left of it.

	Fixed local options not being loaded on Ctrl-W x.

	Fixed graphics of view mode not being hidden on activating menu, more or
	file info modes.

	Fixed descriptions of exit :commands in menus (visible during popup
	completion).

	Fixed statusbar output not being preserved on running commands from
	:history menus.

	Fixed not being able to pick a symbolic link to a directory via
	--choose-files or --on-choose by selecting and opening it.

	Fixed 'slowfs' option not being applied to targets of symbolic links on
	operations related to directory sizes.  Thanks to rok (a.k.a. aca).

0.13-beta to 0.13 (2023-04-04)

	Made "withicase" and "withrcase" affect how files are sorted before
	comparison, otherwise they might not produce the intended effect.

	Reduced cursor flickering during incremental search in visual mode.  Patch
	by filterfalse.

	Fixed segfault on trying to expand "~username" path prefix with a huge